--- a/Sjuklöner/Views/Home/Index.cshtml
+++ b/Sjuklöner/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
     </div>
 
     <div class="row">
-        <p class="col col-md-10 left-margin-12">@Html.ActionLink("Administrera ombud", "IndexOmbud", "CareCompanies")</p>
+        <p class="col col-md-10 left-margin-12">@Html.ActionLink("Administrera ombud", "IndexAllOmbuds", "Account")</p>
     </div>
 
     <div class="row">
