--- a/Sjuklöner/Views/Account/IndexAdmOff.cshtml
+++ b/Sjuklöner/Views/Account/IndexAdmOff.cshtml
@@ -72,3 +72,8 @@ else
         Det finns inga handläggare.
     </div>
 }
+<div class="row row-padding2">
+    <div class="col-left-margin-6 col col-md-2">
+        @Html.ActionLink("Tillbaka", "Index", "Home", null, new { @class = "btn btn-primary btn-primary-small" })
+    </div>
+</div>
