Added "Tillbaka" buttons in Index view for Assistants and in Index view for Collective Agreements.

--- a/Sjuklöner/Views/CollectiveAgreements/Index.cshtml
+++ b/Sjuklöner/Views/CollectiveAgreements/Index.cshtml
@@ -124,3 +124,8 @@
     </table>
     infoIdx = infoIdx + Model.CollectiveAgreementHeader[i].Counter;
 }
+    <div class="row row-padding2">
+        <div class="col-left-margin-6 col col-md-2">
+            @Html.ActionLink("Tillbaka", "Index", "Home", null, new { @class = "btn btn-primary btn-primary-small" })
+        </div>
+    </div>
