--- a/Sjuklöner/Views/Assistants/IndexAllCompanies.cshtml
+++ b/Sjuklöner/Views/Assistants/IndexAllCompanies.cshtml
@@ -66,9 +66,11 @@
         </table>
     } 
 }
+
 <div class="row row-padding2">
-    <div class="col col-md-2">
-        @Html.ActionLink("Avbryt", "Index", "Home", null, new { @class = "btn btn-secondary btn-secondary-small" })
+    <div class="col-left-margin-6 col col-md-2">
+         @Html.ActionLink("Tillbaka", "Index", "Home", null, new { @class = "btn btn-primary btn-primary-small" })
     </div>
 </div>
+
 
