Added "Tillbaka" buttons in two Index views

--- a/Sjuklöner/Views/Assistants/Index.cshtml
+++ b/Sjuklöner/Views/Assistants/Index.cshtml
@@ -112,8 +112,9 @@
         </tr>
     }
 </table>
+
 <div class="row row-padding2">
-    <div class="col col-md-2">
-        @Html.ActionLink("Avbryt", "Index", "Claims", null, new { @class = "btn btn-secondary btn-secondary-small" })
+    <div class="col-left-margin-6 col col-md-2">
+        @Html.ActionLink("Tillbaka", "Index", "Home", null, new { @class = "btn btn-primary btn-primary-small" })
     </div>
 </div>
