--- a/Sjuklöner/Views/CareCompanies/IndexOmbud.cshtml
+++ b/Sjuklöner/Views/CareCompanies/IndexOmbud.cshtml
@@ -81,3 +81,9 @@
         </tr>
     }
 </table>
+
+<div class="row row-padding2">
+    <div class="col-left-margin-6 col col-md-2">
+        @Html.ActionLink("Tillbaka", "Index", "Home", null, new { @class = "btn btn-primary btn-primary-small" })
+    </div>
+</div>
