Introduced a specific Index View and Action for Claims when Role='Admin'

--- a/Sjuklöner/Views/Claims/IndexPageAdmin.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageAdmin.cshtml
@@ -1,8 +1,8 @@
 ﻿@model Sjuklöner.Viewmodels.IndexPageAdmOffVM
-
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "IndexPageAdmin";
 }
+
 <body>
     <div class="row index-page-margin">
         @using (Html.BeginForm("IndexPageAdmOff", "Claims", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
@@ -303,5 +303,5 @@
     </div>
     <hr class="claim-divider" />
 
-
 </body>
+
