--- a/Sjuklöner/Views/Claims/Index.cshtml
+++ b/Sjuklöner/Views/Claims/Index.cshtml
@@ -12,7 +12,7 @@
             <p class="col col-md-offset-2 col-md-10 second-page-header">Steg 2: Ange arbetstid och jourtid</p>*@
     </div>
     <p>
-        @Html.ActionLink("Skapa ny ansökan", "Create")
+        @*Html.ActionLink("Skapa ny ansökan", "Create")*@
     </p>
     <table class="table">
         <tr>
@@ -110,7 +110,7 @@
                     @Html.DisplayNameFor(model => model.ClaimDay2To14)
                 </th>*@
             <th>
-                @Html.DisplayNameFor(model => model.ClaimSum)
+                @Html.DisplayNameFor(model => model.ClaimedSum)
             </th>
             <th></th>
         </tr>
@@ -212,7 +212,7 @@
                         @Html.DisplayFor(modelItem => item.ClaimDay2To14)
                     </td>*@
                 <td>
-                    @Html.DisplayFor(modelItem => item.ClaimSum)
+                    @Html.DisplayFor(modelItem => item.ClaimedSum)
                 </td>
                 <td>
                     @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
