--- a/Sjuklöner/Views/Assistants/Index.cshtml
+++ b/Sjuklöner/Views/Assistants/Index.cshtml
@@ -20,9 +20,18 @@
     </div>
 </div>
 <br />
-<hr class="claim-divider" />
-<br />
-<table class="table">
+@if (!Model.AssistantList.Any())
+{
+    <div class="left-margin-23 display-large-font">
+        Det finns inga assistenter.
+    </div>
+    <br />
+}
+else
+{
+    <hr class="claim-divider" />
+    <br />
+    <table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.AssistantList[0].FirstName)
@@ -111,7 +120,8 @@
             </td>
         </tr>
     }
-</table>
+    </table>
+}
 
 <div class="row row-padding2">
     <div class="col-left-margin-6 col col-md-2">
