When CareCompany is deleted by Admin, Ombud and Assistants should be automatically deleted

--- a/Sjuklöner/Views/CareCompanies/Delete.cshtml
+++ b/Sjuklöner/Views/CareCompanies/Delete.cshtml
@@ -5,7 +5,11 @@
 }
 <div class="row index-page-margin">
     <p class="col col-md-2"></p>
-    <p class="page-header8 col col-md-10">Ta bort assistansbolaget</p>
+    <p class="page-header8 col col-md-10">Ta bort assistansbolaget</p>    
+    <p class="second-page-header col col-md-10">Observera att alla ombud och assistenter som hör till detta bolag kommer att tas bort !</p>
+    <p class="second-page-header col col-md-10">Dessutom kommer alla påbörjade ansökningar som inte har skickats in att tas bort !</p>
+    <br />
+    <br />
     <nl class="col col-md-offset-2 font-size-16">Klicka på "Bekräfta" nedan för att ta bort detta assistansbolag</nl>
 </div>
 <div>
