--- a/Sjuklöner/Views/Claims/IndexPageAdmin.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageAdmin.cshtml
@@ -62,40 +62,40 @@
 
                     @foreach (var item in Model.InInboxClaims)
                     {
-                        <tr>
-                            <td>
-                                @Html.ActionLink(item.ReferenceNumber, "Recommend", "Claims", new { id = item.Id }, new { @class = "btn btn-primary btn-primary-small" })
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.StatusDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.CareCompany.CompanyName)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.RegAssistantSSN)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.CustomerSSN)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.QualifyingDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.NumberOfSickDays)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.ClaimedSum)
-                            </td>
-                            @*<td>
-                                    @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
-                                    @Html.ActionLink("Detaljer", "Details", new { id = item.Id })
-                                    @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
-                                </td>*@
-                        </tr>
+                    <tr>
+                        <td>
+                            @Html.ActionLink(item.ReferenceNumber, "Recommend", "Claims", new { id = item.Id }, new { @class = "btn btn-primary btn-primary-small" })
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.StatusDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CareCompany.CompanyName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.RegAssistantSSN)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CustomerSSN)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.QualifyingDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.NumberOfSickDays)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ClaimedSum)
+                        </td>
+                        <td>
+                            @*Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |*@
+                            @*Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |*@
+                            @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
+                        </td>       
+                    </tr>
                     }
 
                 </table>
@@ -152,40 +152,40 @@
 
                     @foreach (var item in Model.UnderReviewClaims)
                     {
-                        <tr>
-                            <td>
-                                @Html.ActionLink(item.ReferenceNumber, "Recommend", "Claims", new { id = item.Id }, new { @class = "btn btn-primary btn-primary-small" })
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.StatusDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.CareCompany.CompanyName)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.RegAssistantSSN)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.CustomerSSN)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.QualifyingDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.NumberOfSickDays)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.ClaimedSum)
-                            </td>
-                            @*<td>
-                                    @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
-                                    @Html.ActionLink("Detaljer", "Details", new { id = item.Id })
-                                    @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
-                                </td>*@
-                        </tr>
+                    <tr>
+                        <td>
+                            @Html.ActionLink(item.ReferenceNumber, "Recommend", "Claims", new { id = item.Id }, new { @class = "btn btn-primary btn-primary-small" })
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.StatusDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CareCompany.CompanyName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.RegAssistantSSN)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CustomerSSN)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.QualifyingDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.NumberOfSickDays)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ClaimedSum)
+                        </td>
+                        <td>
+                            @*Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |*@
+                            @*Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |*@
+                            @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
+                        </td>           
+                    </tr>
                     }
 
                 </table>
@@ -248,46 +248,46 @@
 
                     @foreach (var item in Model.DecidedClaims)
                     {
-                        <tr>
-                            <td>
-                                @Html.ActionLink(item.ReferenceNumber, "Recommend", "Claims", new { id = item.Id }, new { @class = "btn btn-primary btn-primary-small" })
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.StatusDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.CareCompany.CompanyName)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.RegAssistantSSN)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.CustomerSSN)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.QualifyingDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.NumberOfSickDays)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.ClaimedSum)
-                            </td>
-                            <td class="highlight-green-bold">
-                                @Html.DisplayFor(modelItem => item.ApprovedSum)
-                            </td>
-                            <td class="highlight-red-bold">
-                                @Html.DisplayFor(modelItem => item.RejectedSum)
-                            </td>
-                            @*<td>
-                                    @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
-                                    @Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |
-                                    @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
-                                </td>*@
-                        </tr>
+                    <tr>
+                        <td>
+                            @Html.ActionLink(item.ReferenceNumber, "Recommend", "Claims", new { id = item.Id }, new { @class = "btn btn-primary btn-primary-small" })
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.StatusDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CareCompany.CompanyName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.RegAssistantSSN)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CustomerSSN)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.QualifyingDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.NumberOfSickDays)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ClaimedSum)
+                        </td>
+                        <td class="highlight-green-bold">
+                            @Html.DisplayFor(modelItem => item.ApprovedSum)
+                        </td>
+                        <td class="highlight-red-bold">
+                            @Html.DisplayFor(modelItem => item.RejectedSum)
+                        </td>
+                        <td>
+                            @*Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |*@
+                            @*Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |*@
+                            @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
+                        </td>            
+                    </tr>
                     }
 
                 </table>
