--- a/Sjuklöner/Views/Claims/IndexPageAdmin.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageAdmin.cshtml
@@ -1,11 +1,11 @@
 ﻿@model Sjuklöner.Viewmodels.IndexPageAdmOffVM
+
 @{
     ViewBag.Title = "IndexPageAdmin";
 }
-
 <body>
     <div class="row index-page-margin">
-        @using (Html.BeginForm("IndexPageAdmOff", "Claims", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        @using (Html.BeginForm("IndexPageAdmin", "Claims", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
         {
             <p class="page-header col col-md-7">Ansökningar</p>
             <select name="searchBy" class="col-md-2 input-sm align-bottom5">
@@ -57,45 +57,48 @@
                         <th class="medium-col">
                             Yrkat belopp (Kr)
                         </th>
-                        @*<th></th>*@
+                        <th></th>
                     </tr>
 
                     @foreach (var item in Model.InInboxClaims)
                     {
-                    <tr>
-                        <td>
-                            @Html.ActionLink(item.ReferenceNumber, "Recommend", "Claims", new { id = item.Id }, new { @class = "btn btn-primary btn-primary-small" })
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.StatusDate)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.CareCompany.CompanyName)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.RegAssistantSSN)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.CustomerSSN)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.QualifyingDate)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.NumberOfSickDays)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.ClaimedSum)
-                        </td>
-                        <td>
-                            @*Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |*@
-                            @*Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |*@
-                            @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
-                        </td>       
-                    </tr>
+                        <tr>
+                            <td>
+                                @Html.ActionLink(item.ReferenceNumber, "Recommend", "Claims", new { id = item.Id }, new { @class = "btn btn-primary btn-primary-small" })
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.StatusDate)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.CareCompany.CompanyName)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.RegAssistantSSN)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.CustomerSSN)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.QualifyingDate)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.NumberOfSickDays)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.ClaimedSum)
+                            </td>
+                            <td>
+                                @Html.ActionLink("Ta bort", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-danger-small" })
+                            </td>
+                            @*<td>
+                                 @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
+                                 @Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |
+                                 @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
+                                </td>*@
+                        </tr>
                     }
 
                 </table>
@@ -146,46 +149,49 @@
                         </th>
                         <th class="medium-col">
                             Yrkat belopp (Kr)
-                        </th>
-                        @*<th></th>*@
+                        </th>                        
+                        <th></th>
                     </tr>
 
                     @foreach (var item in Model.UnderReviewClaims)
                     {
-                    <tr>
-                        <td>
-                            @Html.ActionLink(item.ReferenceNumber, "Recommend", "Claims", new { id = item.Id }, new { @class = "btn btn-primary btn-primary-small" })
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.StatusDate)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.CareCompany.CompanyName)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.RegAssistantSSN)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.CustomerSSN)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.QualifyingDate)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.NumberOfSickDays)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.ClaimedSum)
-                        </td>
-                        <td>
-                            @*Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |*@
-                            @*Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |*@
-                            @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
-                        </td>           
-                    </tr>
+                        <tr>
+                            <td>
+                                @Html.ActionLink(item.ReferenceNumber, "Recommend", "Claims", new { id = item.Id }, new { @class = "btn btn-primary btn-primary-small" })
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.StatusDate)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.CareCompany.CompanyName)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.RegAssistantSSN)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.CustomerSSN)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.QualifyingDate)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.NumberOfSickDays)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.ClaimedSum)
+                            </td>
+                            <td>
+                                @Html.ActionLink("Ta bort", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-danger-small" })
+                            </td>
+                            @*<td>
+                                @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
+                                @Html.ActionLink("Detaljer", "Details", new { id = item.Id })
+                                @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
+                                </td>*@
+                        </tr>
                     }
 
                 </table>
@@ -242,52 +248,55 @@
                         </th>
                         <th class="medium-col">
                             Avslaget belopp (Kr)
-                        </th>
-                        @*<th></th>*@
+                        </th>                        
+                        <th></th>
                     </tr>
 
                     @foreach (var item in Model.DecidedClaims)
                     {
-                    <tr>
-                        <td>
-                            @Html.ActionLink(item.ReferenceNumber, "Recommend", "Claims", new { id = item.Id }, new { @class = "btn btn-primary btn-primary-small" })
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.StatusDate)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.CareCompany.CompanyName)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.RegAssistantSSN)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.CustomerSSN)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.QualifyingDate)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.NumberOfSickDays)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.ClaimedSum)
-                        </td>
-                        <td class="highlight-green-bold">
-                            @Html.DisplayFor(modelItem => item.ApprovedSum)
-                        </td>
-                        <td class="highlight-red-bold">
-                            @Html.DisplayFor(modelItem => item.RejectedSum)
-                        </td>
-                        <td>
-                            @*Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |*@
-                            @*Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |*@
-                            @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
-                        </td>            
-                    </tr>
+                        <tr>
+                            <td>
+                                @Html.ActionLink(item.ReferenceNumber, "Recommend", "Claims", new { id = item.Id }, new { @class = "btn btn-primary btn-primary-small" })
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.StatusDate)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.CareCompany.CompanyName)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.RegAssistantSSN)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.CustomerSSN)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.QualifyingDate)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.NumberOfSickDays)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.ClaimedSum)
+                            </td>
+                            <td class="highlight-green-bold">
+                                @Html.DisplayFor(modelItem => item.ApprovedSum)
+                            </td>
+                            <td class="highlight-red-bold">
+                                @Html.DisplayFor(modelItem => item.RejectedSum)
+                            </td>
+                            <td>
+                                @Html.ActionLink("Ta bort", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-danger-small" })
+                            </td>
+                            @*<td>
+                                @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
+                                @Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |
+                                @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
+                                </td>*@
+                        </tr>
                     }
 
                 </table>
