--- a/Sjuklöner/Views/Assistants/Delete.cshtml
+++ b/Sjuklöner/Views/Assistants/Delete.cshtml
@@ -12,6 +12,14 @@
     <hr class="claim-divider" />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.CareCompany.CompanyName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CareCompany.CompanyName)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.FirstName)
         </dt>
 
