Show CareCompany Name in views for 'Update Assistants'

--- a/Sjuklöner/Views/Assistants/Edit.cshtml
+++ b/Sjuklöner/Views/Assistants/Edit.cshtml
@@ -7,6 +7,13 @@
     <p class="page-header7 col col-md-offset-2 col-md-10">Uppdatera assistent</p>
 </div>
 <div class="row">
+    <div class="form-group">
+        <div class="col col-md-offset-2 col-md-10 bold-36">
+            @Html.DisplayFor(model => model.CompanyName, null, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>   
+</div>
+<div class="row">
     <p class="col col-md-2"></p>
     <p class="col col-md-10">Uppgifterna används vid ansökan om sjuklöneersättning</p>
 </div>
