--- a/Sjuklöner/Views/Claims/IndexPageAdmin.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageAdmin.cshtml
@@ -149,7 +149,7 @@
                         </th>
                         <th class="medium-col">
                             Yrkat belopp (Kr)
-                        </th>                        
+                        </th>
                         <th></th>
                     </tr>
 
@@ -248,7 +248,7 @@
                         </th>
                         <th class="medium-col">
                             Avslaget belopp (Kr)
-                        </th>                        
+                        </th>
                         <th></th>
                     </tr>
 
@@ -310,7 +310,102 @@
             }
         </div>
     </div>
+    
     <hr class="claim-divider" />
+    <div class="row">
+        <div class="col">
+            <div class="second-page-header">
+                Sparade, Assistansbolaget har upphört
+            </div>
+            @if (Model.SavedClaims?.Count() > 0)
+            {
+                <table class="table">
+                    <tr>
+                        <th class="small-col">
+                            Referensnummer
+                        </th>
+                        <th class="small-col">
+                            Beslutsdatum
+                        </th>                       
+                        <th class="small-col">
+                            Assistentens personnummer
+                        </th>
+                        <th class="small-col">
+                            Kundens personnummer
+                        </th>
+                        <th class="small-col">
+                            Första sjukdag
+                        </th>
+                        <th class="small-col">
+                            Sista sjukdag
+                        </th>
+                        <th class="small-col">
+                            Antal sjukdagar
+                        </th>
+                        <th class="medium-col">
+                            Yrkat belopp (Kr)
+                        </th>
+                        <th class="small-col">
+                            Godkänt belopp (Kr)
+                        </th>
+                        <th class="medium-col">
+                            Avslaget belopp (Kr)
+                        </th>
+                        @*<th></th>*@
+                    </tr>
+
+                    @foreach (var item in Model.SavedClaims)
+                    {
+                        <tr>
+                            <td>
+                                @Html.ActionLink(item.ReferenceNumber, "Recommend", "Claims", new { id = item.Id }, new { @class = "btn btn-primary btn-primary-small" })
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.StatusDate)
+                            </td>                          
+                            <td>
+                                @Html.DisplayFor(modelItem => item.RegAssistantSSN)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.CustomerSSN)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.QualifyingDate)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.NumberOfSickDays)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.ClaimedSum)
+                            </td>
+                            <td class="highlight-green-bold">
+                                @Html.DisplayFor(modelItem => item.ApprovedSum)
+                            </td>
+                            <td class="highlight-red-bold">
+                                @Html.DisplayFor(modelItem => item.RejectedSum)
+                            </td>
+                            @*<td>
+                                    @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
+                                    @Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |
+                                    @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
+                                </td>*@
+                        </tr>
+                    }
+
+                </table>
+            }
+            else
+            {
+                <div class="left-margin-23 font-size-16">
+                    Det finns inga sparade ansökningar.
+                </div>
+                <br />
+            }
+        </div>
+    </div>
 
 </body>
 
