--- a/Sjuklöner/Content/Site.css
+++ b/Sjuklöner/Content/Site.css
@@ -388,6 +388,21 @@ li a {
     border: none;
 }
 
+.second-page-header3 {
+    font-size: 24px;
+    /*line-height: 34px;*/
+    padding: 20px 15px 0 5px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    margin-left: 0;
+    /*margin-bottom: 40px;*/
+    /*font-family: "caslonno224ef-blackregular", "Whitney SSm A", "Whitney SSm B", Arial, sans-serif;
+    font-family: 'Chonburi', cursive;
+    color: #202020;*/
+    font-weight: bold;
+    border: none;
+}
+
 .second-page-header-large {
     font-size: 36px;
     /*line-height: 34px;*/
@@ -1421,6 +1436,22 @@ a:hover, a:focus {
 
 .index-page-margin {
     margin-top: 150px;
+}
+
+.small-col-admin {
+    width: 8%;
+}
+
+.medium-col-admin {
+    width: 12%;
+}
+
+.slarge-col-admin {
+    width: 16%;
+}
+
+.large-col-admin {
+    width: 25%;
 }
 
 .small-col {
