--- a/Sjuklöner/Views/CareCompanies/EditOmbud.cshtml
+++ b/Sjuklöner/Views/CareCompanies/EditOmbud.cshtml
@@ -6,7 +6,10 @@
 @using (Html.BeginForm("EditOmbud", "CareCompanies", null, FormMethod.Post))
 {
     @Html.HiddenFor(model => model.CareCompanyId)
-    @Html.HiddenFor(model => model.CareCompanyName)
+    if (!User.IsInRole("Admin"))
+    {
+        @Html.HiddenFor(model => model.CareCompanyName)
+    }
     @Html.AntiForgeryToken()
 
     <div class="row">
@@ -19,6 +22,16 @@
     <hr class="claim-divider" />
     <div class="form-horizontal">
         @Html.ValidationSummary(true, "", new { @class = "text-danger font-size-11" })
+
+        @if (User.IsInRole("Admin"))
+        {
+            <div class="form-group">
+                @Html.LabelFor(model => model.CareCompanyName, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10 align-bottom3">
+                    @Html.DisplayFor(model => model.CareCompanyName, new { htmlAttributes = new { @class = "form-control" } })
+                </div>
+            </div>
+        }
 
         <div class="form-group">
             @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -59,9 +72,18 @@
             <div class="col col-md-offset-2 col-md-1">
                 <input class="btn btn-primary btn-primary-small" type="submit" name="submitButton" value="Spara" id="proceed" />
             </div>
-            <div>
-                @Html.ActionLink("Avbryt", "IndexOmbud", null, new { @class = "btn btn-secondary btn-secondary-small" })
-            </div>
+            @if (User.IsInRole("Ombud") || User.IsInRole("AdministrativeOfficial"))
+            {
+                <div>
+                    @Html.ActionLink("Avbryt", "IndexOmbud", null, new { @class = "btn btn-secondary btn-secondary-small" })
+                </div>
+            }
+            else if (User.IsInRole("Admin"))
+            {
+                <div>
+                    @Html.ActionLink("Avbryt", "IndexAllOmbuds", "Account", null, new { @class = "btn btn-secondary btn-secondary-small" })
+                </div>
+            }
         </div>
     </div>
 }
