--- a/Sjuklöner/Views/Shared/_Layout.cshtml
+++ b/Sjuklöner/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                     </button>
                 </div>
             </div>
-            <div class="red-bar">
+            <div class="red-bar navbar-collapse collapse">
                 <div class="red-bar-filler" style="width:75%; margin-left: auto; margin-right: auto; float: none;">
                     <ul style="padding-left: 4px;">
                         <li>@Html.ActionLink("Ansökningar", "Index", "Claims", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
@@ -53,7 +53,7 @@
                     </button>
                 </div>
             </div>
-            <div class="blue-bar">
+            <div class="blue-bar navbar-collapse collapse">
                 <div class="blue-bar-filler" style="width:75%; margin-left: auto; margin-right: auto; float: none;">
                     <ul style="padding-left:4px;">
                         <li>@Html.ActionLink("Ansökningar", "Index", "Claims", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
@@ -80,7 +80,7 @@
                     </button>
                 </div>
             </div>
-            <div class="blue-bar">
+            <div class="blue-bar navbar-collapse collapse">
                 <div class="blue-bar-filler" style="width:75%; margin-left: auto; margin-right: auto; float: none;">
                     <ul style="padding-left:4px;">
                         <li>@Html.ActionLink("Kollektivavtal", "Index", "CollectiveAgreements", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
