--- a/Sjuklöner/Views/Shared/_Layout.cshtml
+++ b/Sjuklöner/Views/Shared/_Layout.cshtml
@@ -80,8 +80,8 @@
                     </button>
                 </div>
             </div>
-            <div class="blue-bar navbar-collapse collapse">
-                <div class="blue-bar-filler" style="width:75%; margin-left: auto; margin-right: auto; float: none;">
+            <div class="black-bar navbar-collapse collapse">
+                <div class="black-bar-filler" style="width:75%; margin-left: auto; margin-right: auto; float: none;">
                     <ul style="padding-left:4px;">
                         <li>@Html.ActionLink("Kollektivavtal", "Index", "CollectiveAgreements", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
                         <li>@Html.ActionLink("Handläggare", "IndexAdmOff", "Account", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
