Fault correction, fixed 'Avbryt' länk in NewAdmOff.cshtml

--- a/Sjuklöner/Views/Account/NewAdmOff.cshtml
+++ b/Sjuklöner/Views/Account/NewAdmOff.cshtml
@@ -73,7 +73,7 @@
             <input type="submit" class="btn btn-primary btn-primary-small" value="Spara" />
         </div>
         <div class="small-padding-left3 col col-md-1">
-            @Html.ActionLink("Avbryt", "IndexPageAdmOff", "Claims", null, new { @class = "btn btn-secondary btn-secondary-small" })
-        </div>
+            @Html.ActionLink("Avbryt", "IndexAdmOff", "Account", null, new { @class = "btn btn-secondary btn-secondary-small" })
+        </div>      
     </div>
 }
