Added filtering to "My Claims"

--- a/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
@@ -29,6 +29,7 @@
                 <option value="Referensnummer">Referensnummer</option>
                 <option value="CSSN">Kundens Personnummer</option>
                 <option value="ASSN">Assistentens Personnummer</option>
+                <option value="Mine">Mina Ansökningar</option>
             </select>
             <input type="text" name="searchString" id="searchString" class="input-height col-md-2 input-sm align-bottom4" />
             <div class="col col-md-1 col-no-left-padding col-no-right-padding">
